<resources>
    <string name="app_name">Discount Calculator</string>
    <string name="subtitle">Developed by Cheah Pin Chee</string>
    <string name="app_version">V1.0</string>
    <string name="developer_name">Cheah Pin Chee</string>
    <string name="developer_email">mr.chee37@gmail.com</string>
    <string name="developer_contact">0108845880</string>
    <string name="tv_app_name">App:</string>
    <string name="tv_app_ver">Version:</string>
    <string name="tv_dev_name">Developer:</string>
    <string name="tv_dev_email">Email:</string>
    <string name="tv_dev_contact">Contact:</string>
    <string name="max_value">100.00</string>
    <string name="numKey_0">0</string>
    <string name="numKey_1">1</string>
    <string name="numKey_2">2</string>
    <string name="numKey_3">3</string>
    <string name="numKey_4">4</string>
    <string name="numKey_5">5</string>
    <string name="numKey_6">6</string>
    <string name="numKey_7">7</string>
    <string name="numKey_8">8</string>
    <string name="numKey_9">9</string>
    <string name="numKey_dot">.</string>
    <string name="all_clear">AC</string>
    <string name="result">0.0</string>
    <string name="price">Price</string>
    <string name="tax_rate">Tax %</string>
    <string name="discount_percent">Discount %</string>
    <string name="discount_fixed">Coupon</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_flip">Flip Side</string>
    <string name="menu_about">About</string>
    <string name="on_off_tax">Tax%</string>
    <string name="on_off_percent">Discount%</string>
    <string name="on_off_fixed">Coupon</string>
    <string name="error">ERROR</string>

    <!-- Alternative formula display -->
<!--    <string name="f1">Price</string>-->
<!--    <string name="f2">Price + (Price * Tax)</string>-->
<!--    <string name="f3">Price - (Price * Discount%)</string>-->
<!--    <string name="f4">Price - Coupon</string>-->
<!--    <string name="f5">Price + (Price * Tax) - ((Price + (Price * Tax)) * Discount%)</string>-->
<!--    <string name="f6">Price + (Price * Tax) - (Price * Discount%)</string>-->
<!--    <string name="f7">Price + (Price * Tax) - Coupon</string>-->
<!--    <string name="f8">Price - (Price * Discount%) + ((Price - (Price * Discount%)) * Tax)</string>-->
<!--    <string name="f9">Price - (Price * Discount%) + (Price * Tax)</string>-->
<!--    <string name="f10">Price - (Price * Discount%) - Coupon</string>-->
<!--    <string name="f11">Price - Coupon + ((Price - Coupon) * Tax)</string>-->
<!--    <string name="f12">Price - Coupon + (Price * Tax)</string>-->
<!--    <string name="f13">Price - Coupon - ((Price - Coupon) * Discount%)</string>-->
<!--    <string name="f14">Price - Coupon - (Price * Discount%)</string>-->
<!--    <string name="f15">Price + (Price * Tax) - ((Price + (Price * Tax)) * Discount%) - Coupon</string>-->
<!--    <string name="f16">Price + (Price * Tax) - (Price  * Discount%) - Coupon</string>-->
<!--    <string name="f17">Price + (Price * Tax) - Coupon - ((Price + (Price * Tax) - Coupon) * Discount%)</string>-->
<!--    <string name="f18">Price + (Price * Tax) - Coupon - (Price * Discount%)</string>-->
<!--    <string name="f19">Price - (Price * Discount%) + ((Price - (Price * Discount%)) * Tax) - Coupon</string>-->
<!--    <string name="f20">Price - (Price * Discount%) + (Price * Tax) - Coupon</string>-->
<!--    <string name="f21">Price - (Price * Discount%) - Coupon + ((Price - (Price * Discount%) - Coupon) * Tax)</string>-->
<!--    <string name="f22">Price - (Price * Discount%) - Coupon + (Price * Tax)</string>-->
<!--    <string name="f23">Price - Coupon + ((Price - Coupon) * Tax) - ((Price - Coupon + ((Price - Coupon) * Tax)) * Discount%)</string>-->
<!--    <string name="f24">Price - Coupon + ((Price - Coupon) * Tax) - (Price * Discount%)</string>-->
<!--    <string name="f25">Price - Coupon + (Price * Tax) - ((Price + (Price * Tax)) * Discount%)</string>-->
<!--    <string name="f26">Price - Coupon + (Price * Tax) - (Price * Discount%)</string>-->
<!--    <string name="f27">Price - Coupon - ((Price - Coupon) * Discount%) + ((Price - Coupon - ((Price - Coupon) * Discount%)) * Tax)</string>-->
<!--    <string name="f28">Price - Coupon - ((Price - Coupon) * Discount%) + (Price * Tax)</string>-->
<!--    <string name="f29">Price - Coupon - (Price * Discount%) + ((Price - Coupon - (Price * Discount%)) * Tax)</string>-->
<!--    <string name="f30">Price - Coupon - (Price * Discount%) + (Price * Tax)</string>-->

    <string name="f1">P</string>
    <string name="f2">P + (P * T)</string>
    <string name="f3">P - (P * D)</string>
    <string name="f4">P - C</string>
    <string name="f5">P + (P * T) - ((P + (P * T)) * D)</string>
    <string name="f6">P + (P * T) - (P * D)</string>
    <string name="f7">P + (P * T) - C</string>
    <string name="f8">P - (P * D) + ((P - (P * D)) * T)</string>
    <string name="f9">P - (P * D) + (P * T)</string>
    <string name="f10">P - (P * D) - C</string>
    <string name="f11">P - C + ((P - C) * T)</string>
    <string name="f12">P - C + (P * T)</string>
    <string name="f13">P - C - ((P - C) * D)</string>
    <string name="f14">P - C - (P * D)</string>
    <string name="f15">P + (P * T) - ((P + (P * T)) * D) - C</string>
    <string name="f16">P + (P * T) - (P  * D) - C</string>
    <string name="f17">P + (P * T) - C - ((P + (P * T) - C) * D)</string>
    <string name="f18">P + (P * T) - C - (P * D)</string>
    <string name="f19">P - (P * D) + ((P - (P * D)) * T) - C</string>
    <string name="f20">P - (P * D) + (P * T) - C</string>
    <string name="f21">P - (P * D) - C + ((P - (P * D) - C) * T)</string>
    <string name="f22">P - (P * D) - C + (P * T)</string>
    <string name="f23">P - C + ((P - C) * T) - ((P - C + ((P - C) * T)) * D)</string>
    <string name="f24">P - C + ((P - C) * T) - (P * D)</string>
    <string name="f25">P - C + (P * T) - ((P - C + (P * T)) * D)</string>
    <string name="f26">P - C + (P * T) - (P * D)</string>
    <string name="f27">P - C - ((P - C) * D) + ((P - C - ((P - C) * D)) * T)</string>
    <string name="f28">P - C - ((P - C) * D) + (P * T)</string>
    <string name="f29">P - C - (P * D) + ((P - C - (P * D)) * T)</string>
    <string name="f30">P - C - (P * D) + (P * T)</string>
</resources>