<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/about"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="50dp"
    android:background="@color/dark_blue"
    android:paddingHorizontal="20sp"
    android:paddingVertical="40dp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/profile_pic" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout style="@style/text_column">

            <TextView
                style="@style/tv.label"
                android:text="@string/tv_app_name" />

            <TextView
                style="@style/tv.label"
                android:text="@string/tv_app_ver" />

            <TextView
                style="@style/tv.label"
                android:text="@string/tv_dev_name" />

            <TextView
                style="@style/tv.label"
                android:text="@string/tv_dev_email" />

            <TextView
                style="@style/tv.label"
                android:text="@string/tv_dev_contact" />
        </LinearLayout>

        <LinearLayout
            style="@style/text_column"
            android:layout_weight="1"
            android:gravity="start">

            <TextView
                style="@style/tv.text"
                android:text="@string/app_name" />

            <TextView
                style="@style/tv.text"
                android:text="@string/app_version" />

            <TextView
                style="@style/tv.text"
                android:text="@string/developer_name" />

            <TextView
                style="@style/tv.text"
                android:text="@string/developer_email" />

            <TextView
                style="@style/tv.text"
                android:text="@string/developer_contact" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

