<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/reset"
        android:title="@string/menu_reset"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_flip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:icon="@drawable/swap_horizontal_circle"
        android:title="@string/menu_flip" />
    <item
        android:id="@+id/menu_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/about"
        android:title="@string/menu_about" />
</menu>